# phasesix

./: .dockerignore  .editorconfig  .env.docker  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  MyProject.komodoproject  README.md  demo_data.json  deploy.sh  docker-compose.yml  entrypoint.sh  fabfile.py  fixtures.json  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  tmux.sh  todo.md  update.sh  update_bootswatch.sh  urpg.sql.bz2
.k8s/: deployment.yaml  preps.yaml
armory/: admin.py  choices.py  mixins.py  models.py  urls.py  views.py
bestiary/: admin.py  models.py  urls.py
body_modifications/: admin.py  apps.py  models.py
campaigns/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
characters/: admin.py  dice.py  feeds.py  forms.py  models.py  urls.py  utils.py  views.py
contrib/: antique-armor.json  dump.sh  fixtures.json  load.sh
entrypoints/: migrate.sh
forum/: forms.py  models.py  urls.py  views.py
gmtools/: forms.py  urls.py  views.py
homebrew/: forms.py  models.py  urls.py  views.py
horror/: admin.py  models.py
inline_admin_panel/: apps.py
magic/: admin.py  forms.py  models.py  urls.py  views.py
pantheon/: admin.py  models.py
phasesix/: .env.example  manage.py
portal/: apps.py  forms.py  urls.py  views.py
rulebook/: admin.py  models.py  urls.py  views.py
rules/: admin.py  models.py  urls.py  views.py
startbootstrap-shop-homepage-gh-pages/: index.html
urpg/: asgi.py  settings.py  urls.py
world/: models.py
worlds/: admin.py  apps.py  context_processors.py  forms.py  (+5 more)
(+967 files in other folders)
